fixes for java 17, readme